@@ -40,6 +40,7 @@ uqm_INSTALL_SHAREDIR='@INSTALL_SHAREDIR@'
 uqm_SOUNDMODULE='@SOUNDMODULE@'
 uqm_OGGVORBIS='@OGGVORBIS@'
 uqm_USE_INTERNAL_MIKMOD='@USE_INTERNAL_MIKMOD@'
+uqm_HAVE_GETOPT_LONG='@HAVE_GETOPT_LONG@'
 uqm_HAVE_REGEX='@HAVE_REGEX_H_FLAG@'
 uqm_HAVE_OPENGL='@HAVE_OPENGL@'
 uqm_USE_ZIP_IO='@USE_ZIP_IO@'
@@ -52,7 +53,7 @@ MACRO_WIN32='@MACRO_WIN32@'
 MACRO___MINGW32__='@MACRO___MINGW32__@'
 export BUILD_SYSTEM HOST_SYSTEM DEBUG
 export MACRO_WIN32 MACRO___MINGW32__
-export uqm_SOUNDMODULE uqm_USE_INTERNAL_MIKMOD uqm_HAVE_REGEX uqm_USE_WINSOCK
-export uqm_HAVE_OPENGL uqm_USE_ZIP_IO uqm_USE_PLATFORM_ACCEL uqm_THREADLIB
-export uqm_NETPLAY
+export uqm_SOUNDMODULE uqm_USE_INTERNAL_MIKMOD uqm_HAVE_GETOPT_LONG
+export uqm_HAVE_REGEX uqm_USE_WINSOCK uqm_HAVE_OPENGL uqm_USE_ZIP_IO
+export uqm_USE_PLATFORM_ACCEL uqm_THREADLIB uqm_NETPLAY
 
