@@ -432,8 +432,8 @@ uqm_process_config() {
 			PREPROC_OBJC MKDEP_OBJC COMPILE_OBJC \
 			MAKE ECHON SED DEBUG JOYSTICK NETPLAY \
 			OGGVORBIS SOUNDMODULE USE_INTERNAL_MIKMOD \
-			HAVE_OPENGL HAVE_REGEX_H_FLAG USE_ZIP_IO \
-			USE_PLATFORM_ACCEL THREADLIB USE_WINSOCK \
+			HAVE_OPENGL HAVE_GETOPT_LONG HAVE_REGEX_H_FLAG \
+			USE_ZIP_IO USE_PLATFORM_ACCEL THREADLIB USE_WINSOCK \
 			INSTALL_LIBDIR INSTALL_BINDIR INSTALL_SHAREDIR \
 			REZ WINDRES $HAVE_SYMBOLS"
 	SUBSTITUTE_FILES="build.vars"
